force-app/main/default/objects/Donation__c/fields/Company_Pan__c.field-meta.xml
<CustomField>
    <fullName>Company_Pan__c</fullName>
    <label>Company Pan</label>
    <length>150</length>
    <type>Text</type>
</CustomField>