force-app/main/default/objects/Donation__c/fields/Donor_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Name__c</fullName>
    <label>Name of Donor</label>
    <length>250</length>
    <type>Text</type>
</CustomField>