force-app/main/default/objects/Donation__c/fields/Donor_Pan__c.field-meta.xml
<CustomField>
    <fullName>Donor_Pan__c</fullName>
    <label>Donor Pan</label>
    <length>150</length>
    <type>Text</type>
</CustomField>