force-app/main/default/objects/Donation__c/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>150</length>
    <type>Text</type>
</CustomField>