force-app/main/default/objects/Donation__c/fields/QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Image__c</fullName>
    <label>QR Code Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>