force-app/main/default/objects/Donation__c/fields/Receipt_Code__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Code__c</fullName>
    <label>Receipt Code</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>