force-app/main/default/objects/Donation__c/fields/Verification_Link__c.field-meta.xml
<CustomField>
    <fullName>Verification_Link__c</fullName>
    <label>Verification Link</label>
    <type>TextArea</type>
</CustomField>